Refactorred kotlin packages, implementes paging, fix #23
